syntax = "proto3";

package protobolt;
option go_package = "types";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// MetaData contains meta-data about a document.
message MetaData {
    // id is the document's unique ID. It can be any non-empty string.
    string id = 1;

    // version is the version of the document as represented by this value.
    // When saving a document, it must be equal to the version of the document
    // that is currently persisted, otherwise an OptimisticLockError occurs.
    uint64 version = 2;

    // keys is the set of indexing keys applied to the document. keys are used
    // to quickly find a document or set of documents based on identifieres
    // other than the document ID.
    map <string, KeyType> keys = 3;

    // headers is an arbitrary set of key/value pairs that is persisted along
    // with the document content.
    map<string, string> headers = 4;

    // created_at is the time at which the document was created. The value is
    // set automatically when the document is saved.
    google.protobuf.Timestamp created_at = 5;

    // updated_at is the time at which the document was last modified. The value
    // is set automatically when the document is saved.
    google.protobuf.Timestamp updated_at = 6;
}

// KeyType defines the behavior of a document key.
enum KeyType {
    // Shared keys may reference multiple documents contemporaneously.
    SHARED = 0;

    // Unique keys always refer to a single document. Attempting to persist a
    // document with a unique key that is already held by another document
    // results in a DuplicateKeyError.
    UNIQUE = 1;
}

// ContentEnvelope is a container for persisted content. It is present to allow
// the use of the Any type.
message ContentEnvelope {
    google.protobuf.Any content = 1;
}

// KeyData represents a key within the database.
message KeyData {
    KeyType type = 1;
    map<string, bool> documents = 2; // used as set<string>, bool value is always true
}
